--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -13,27 +13,11 @@ body {
 }
 
 #container {
-    opacity: 0%;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    animation-name: fadein;
-    animation-duration: 0.5s;
-    animation-delay: 0.5s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0%;
-    }
-
-    to {
-        opacity: 100%;
-    }
 }
 
 #head-image-container {
@@ -44,6 +28,15 @@ body {
     border-style: solid;
     border-color: white;
     border-width: 2px;
+    transition: opacity 500ms 3s;
+}
+
+.opacity-100 {
+    opacity: 100%;
+}
+
+.opacity-0 {
+    opacity: 0%;
 }
 
 #head-image {
@@ -79,8 +72,7 @@ body {
 }
 
 .edit-button {
-    width: 32px;
-    height: 32px;
+    padding: 8px 16px 8px 16px;
     text-align: center;
     color: white;
     background-color: #00000030;
