--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -28,7 +28,11 @@ body {
     border-style: solid;
     border-color: white;
     border-width: 2px;
+}
+
+.fade-in {
     transition: opacity 500ms 3s;
+    opacity: 100%;
 }
 
 .opacity-100 {
@@ -64,7 +68,7 @@ body {
 
 .headline-box>textarea {
     width: 59vw;
-    height: 9.5vh;
+    height: 4.6vh;
     resize: none;
     line-height: 1.5;
     color: white;
