--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -75,6 +75,11 @@ body {
     font-size: 3vh;
 }
 
+.headline-in {
+    transition: opacity 500ms, transform 500ms ease-out;
+    opacity: 100%;
+}
+
 .edit-button {
     padding: 8px 16px 8px 16px;
     text-align: center;
