--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(-70deg, #3bf1d6, #613edf);
+    background-image: linear-gradient(-70deg, #00ecc9, #721ae6);
     width: 100vw;
     height: 100vh;
 }
