--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(-70deg, #00ecc9, #721ae6);
+    background-image: linear-gradient(-70deg, #3476bf, #56abd9);
     width: 100vw;
     height: 100vh;
 }
@@ -28,6 +28,7 @@ body {
     border-style: solid;
     border-color: white;
     border-width: 2px;
+    border-radius: 1.5vw;
 }
 
 .fade-in {
@@ -60,7 +61,7 @@ body {
 }
 
 .headline-box {
-    background-color: #00000030;
+    background-color: white;
     margin-top: 1.4vh;
     margin-bottom: 1.4vh;
     padding-top: 0.2vh;
@@ -69,12 +70,13 @@ body {
     border-radius: 1.5vh;
     display: flex;
     align-items: center;
-    transition: transform 300ms ease-in-out, background-color 300ms, color 300ms;
+    box-shadow: 1px 1px 4px #000000af;
+    transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out;
 }
 
 .headline-box-focus {
     transform: scale(115%);
-    background-color: #ffffff8f;
+    box-shadow: 30px 30px 20px #0000006f;
 }
 
 .headline-box>textarea {
@@ -82,7 +84,7 @@ body {
     height: 4.6vh;
     resize: none;
     line-height: 1.5;
-    color: white;
+    color: #0000009f;
     font-size: 3vh;
 }
 
