Add un-focused status and design

--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -71,12 +71,16 @@ body {
     display: flex;
     align-items: center;
     box-shadow: 1px 1px 3px 0px #0000006f, 1px 1px 4px 0px #0000006f;
-    transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out;
+    transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out, background-color 500ms;
 }
 
 .headline-box-focus {
     transform: scale(115%);
     box-shadow: 20px 30px 15px 0px #00000038, 20px 30px 45px -4px #0000004f;
+}
+
+.headline-box-nonfocus {
+    background-color: #d8d8d8;
 }
 
 .headline-box>textarea {
