--- a/kbdnews-headline.css
+++ b/kbdnews-headline.css
@@ -4,12 +4,19 @@ body {
     height: 100vh;
 }
 
-#edit-button-container {
+#edit-label-container {
     position: absolute;
     top: 0;
     left: 0;
     display: flex;
     flex-direction: row;
+}
+
+#edit-mode-indicator {
+    padding: 8px;
+    text-align: center;
+    color: white;
+    font-size: xx-large;
 }
 
 #container {
@@ -105,15 +112,4 @@ body {
 .headline-out {
     opacity: 0%;
     transform: translateX(2vw);
-}
-
-.edit-button {
-    padding: 8px 16px 8px 16px;
-    text-align: center;
-    color: white;
-    opacity: 0%;
-}
-
-.edit-button:hover {
-    opacity: 100%;
 }
